Allows for the declaration of the same feature on the same side (left or right or baseline) more than once.
Refs #82867
Refs #110660
Refs #110663
Refs #94443